--- a/packages/create-svelte/templates/default/package.json
+++ b/packages/create-svelte/templates/default/package.json
@@ -14,7 +14,7 @@
 		"svelte": "^3.53.1",
 		"svelte-preprocess": "^4.10.7",
 		"typescript": "^4.9.3",
-		"vite": "^3.2.4"
+		"vite": "^4.0.0-alpha.5"
 	},
 	"type": "module",
 	"dependencies": {
